LablGTK changes log

In Lablgtk-2.16.0:

2012.08.17 [Jacques]
  * generate correct lablgtk2 script for findlib
  * add old-uninstall target
  * support threaded toplevel with Quartz backend, using gtkThTop.ml
    (runs the toplevel loop in another thread)
  * remove GtkThInit from META (not portable)

2012.08.16 [Jacques]
  * update applications/browser for OCaml 4.00
  * update applications/camlirc to use GText instead of GBroken.text

2012.07.26 [Pierre-Marie]
  * improvements to GtkSourceView2.
  * add cast and assignation functions to GText.nocopy_iter.
  * add Gtk 2.10 missing key modifiers.

2012.07.24 [Jacques]
  * can still install using old-install.

2012.06.19 [Adrien]
  * add a high-level API to create keyboard shortcuts.

2012.06.12 [Adrien]
  * add several #as_foo methods: entry, notebook, range
  * new signals for notebook: select_page, reorder_tab,
    change_current_page, move_focus_out, page_{added,removed,reordered}
  * add gtk_container_child_{set,get}_property
  * add gtk_notebook_{set,get}_tab_reorderable
  * add gtk_signal_new which can be used to create custom keyboard shortcuts
  * add g_signal_list and g_signal_query
  * add functions to connect to notify::foo signals which indicate when an
    object property changes
  * add foo#connect#notify_bar methods to add callbacks on changes of
    the "bar" property of the object "foo".

2012.04.11 [Maxence]
  * use findlib to install (see README for the list of installed packages)

2012.06.05 [Jacques]
  * merge GtkSourceView2 additions by Pierre-Marie Pedrot

2012.03.07 [Jacques]
  * add Make_Val_option to wrappers.h

2011.07.20 [Jacques]
  * add gtk_accelerator_name/get_label (for Pierre Boutillier)
  * add gtk_accel_map_foreach/change_entry (ibid)
  * add gdk_window_clear_area (for DDR)
  * make gtk_tree_view_get_visible_range version dependent (Thomas Ripoche)

In Lablgtk-2.14.2:

2010.09.09 [Jacques]
  * add GtkCurve (but it is deprecated since 2.20)

2010.08.16 [Jacques]